--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/app.css">
   </head>
   <body>
     <header>
         <h1>Tienda Muebles</h1>
     </header>    
+
+    <button
+        class="boton"
+    >Guardar</button>
 
     <nav>
         <a href="">Inicio</a>
