Cambios en estilos y media query

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
   </head>
   <body>
     <header>
-        <h1>Tienda Muebles</h1>
+        <h1 class="titulo-principal">Tienda Muebles</h1>
     </header>
-    <nav>
+    <nav class="nav-principal">
         <a href="">Inicio</a>
         <a href="">Nosotros</a>
         <a href="">Contacto</a>
         <a href="">Acerca de</a>
-    </nav>    
+    </nav>
+
+    <div class="hero">
+
+    </div>
 
     <section>
         <h2>Nosotros</h2>
-        <img src="./assets/img/tienda1.jpg" alt="Imagen tienda" />
         <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi
         praesentium, facilis ex ullam quis pariatur nobis fugiat tempore quibusdam
